# XploreLab-agent

./: .env.example  .env.full  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_JA.md  README_ZH.md  alembic.ini  mkdocs.yml  pyproject.toml  utu_agent_ui-0.1.5-py3-none-any.whl
.github/workflows/: pr.yml  tests.yml
alembic/versions/: 9475f821bc1d_initial_migration.py  env.py
configs/: .gitignore  default.yaml  mcp.yaml  simple.yaml  tool_maker.yaml
configs/agents/: base.yaml  default.yaml  gaia.yaml  orchestra.yaml  search_agent.yaml  v01.yaml  web.yaml  workforce.yaml
configs/eval/: browse_comp.yaml  browse_comp_zh.yaml  default.yaml  eval.yaml  example.yaml  gaia.yaml  gaia_test.yaml  gaia_val.yaml  v01.yaml  v02.yaml  v03.yaml  web_walker.yaml  ww.yaml  xbench.yaml
configs/examples/: eval.yaml  mcp.yaml  tool_maker.yaml
configs/model/: base.yaml
configs/toolkits/: basic.yaml
configs/tools/: audio.yaml  bash_remote.yaml  document.yaml  file_edit.yaml  github.yaml  image.yaml  memory.yaml  search.yaml  tabular.yaml  time.yaml  user_interaction.yaml
data/: agent_test.jsonl
data/browse_comp/: test.jsonl
data/browse_comp_zh/: test.jsonl
data/browser_camp_zh/: data.jsonl
data/gaia/: test.jsonl  val.jsonl
data/utu_test/: agent_test.jsonl
data/xbench/: test.jsonl
demo/: demo.py  demo_universal.py  demo_web.py  dummy_client.py
docker/: .env.docker.example  Dockerfile  README.md
docs/: agents.md  auto_generation.md  config.md  data.md  docker.md  env.md  environment_variables.md  eval.md  examples.md  faq.md  frontend.md  index.md  quickstart.md  quickstart_beginner.md  tools.md  ui.md
docs/examples_output/: data_analysis.md  deep_research.md  wide_research.md
docs/pyi/: agent.pyi  context.pyi  data.pyi  tool.pyi
docs/ref/: simple_agent.md
docs/stylesheets/: extra.css
examples/context_manager/: main.py
examples/data_analysis/: README.md  cat_breeds_clean.csv  main.py  main_web.py  planner.py  planner_examples_data.json  web_reporter_sp.j2
examples/eval/: example.json  main.py
examples/file_manager/: README.md  main.py  main_web.py  prepare_messy_files.py
examples/gui_agent_datamaker/: .gitignore  main.py
examples/mcp/: .gitignore  main.py
examples/paper_collector/: README.md  main.py  main_web.py  planner_examples_data.json
examples/ppt_gen/: .gitignore  README.md  fill_template.py  main.py  ppt_template_model.py  synthesis_config.py  utils.py
examples/research/: README.md  main.py  main_web.py  prompts.yaml
examples/rl_train/: README.md  wiki_tool.py
examples/svg_generator/: main.py  main_web.py  planner_examples.json  reporter_csv.j2
examples/tool_maker/: main.py
examples/video_generator/: prompts.md
examples/wide_research/: README.md  main.py  main_web.py  prompts.yaml
frontend/exp_analysis/: .env.example  .gitignore  README.md  components.json  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts
scripts/: chat_ui.py  cli_chat.py  cli_chat_workforce.py  dump_db.py  gen_simple_agent.py  gen_tool.py  result_analysis.py  run_eval.py  run_eval_judge.py  run_eval_ww.py  start_tools_mcp.py
scripts/analysis/: tool_usage.py
scripts/data/: download_dataset.py  process_gaia.py  process_web_walker_qa.py  sampling.py  upload_dataset.py
scripts/db/: clear_cache.py  dump_db.py  migrate_file_cache.py  update_datapoint_indices.py
scripts/tracing/: search_phoenix_span.py  test_phoenix.py
scripts/utils/: dump_tool_schemas.py  merge_stream_events.py  publish_pip.py  replay_server.py  start_tools_mcp.py
tests/: conftest.py  test_config.py  test_search_agent.py  test_tracing.py
tests/agents/: test_background_gen.py  test_build_agent.py  test_common.py  test_env_agent.py  test_llm_agent.py  test_orchestra_agent.py  test_orchestrator_agent.py  test_simple_agent.py  test_workforce_agent.py  test_workforce_subagents.py  test_ww_agent.py  test_ww_background.py
tests/env/: test_docker_manager.py
tests/eval/: conftest.py  test_benchmark.py  test_data_processer.py  test_db_manager.py  test_eval.py  test_evaluation.py  test_processor.py  test_ww_benchmark.py
tests/meta/: test_tool_generator.py
tests/models/: react_sp.j2  test_audio.py  test_react.py  test_react_model.py  test_react_standalone.py
tests/tools/: test_arxiv_toolkit.py  test_audio_toolkit.py  test_base.py  test_bash_toolkit.py  test_basic_tools.py  test_document_toolkit.py  test_file_edit_toolkit.py  test_image_tools.py  test_mcp.py  test_python_executor_toolkit.py  test_search.py  test_search_toolkit.py  test_serper_toolkit.py  test_tabular_toolkit.py  test_video_toolkit.py
tests/tracing/: test_db_tracer.py  test_phoenix.py
tests/utils/: test_agents_utils.py  test_file_utils.py  test_litellm.py  test_llm_output_parser.py  test_openai_utils.py  test_print_utils.py
tests/ww/: test_planner.py
utu/: __init__.py
utu/agents/: __init__.py  base.py  base_agent.py  common.py  context.py  llm_agent.py  orchestra_agent.py  orchestrator_agent.py  simple.py  simple_agent.py  simple_env_agent.py  tool_maker.py  utils.py  workforce_agent.py  ww_agent.py  ww_analyst.py  ww_background_gen.py  ww_planner.py  ww_searcher.py  ww_searcher_simple.py
utu/config/: __init__.py  agent_config.py  base_config.py  eval_config.py  loader.py  model_config.py
utu/context/: __init__.py  (+2 more)
utu/ui/frontend/: .gitignore  MANIFEST.in  README.md  build.sh  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
utu/ui/frontend/src/: App.tsx  index.css  placeholderData.ts
utu/ui/frontend/src/components/: AgentTOC.tsx  BrokenImagePlaceholder.tsx  ChatInput.tsx  HamburgerButton.tsx  Mermaid.tsx  MessageComponent.tsx  SafeMarkdown.tsx  SideBar.css  SideBar.tsx  Sidebar.css
utu/ui/frontend/src/i18n/: i18n.ts
utu/ui/frontend/src/i18n/locales/en/: common.json
utu/ui/frontend/src/i18n/locales/zh/: common.json
utu/ui/frontend/src/services/: websocket.service.ts
utu/ui/frontend/src/types/: events.ts  i18next.d.ts  message.ts  requests.ts
(+302 files in other folders)
