[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "utu_agent_ui"
version = "0.1.4"
description = "UI webpages for utu-agent"
authors = [{name = "lichaochen", email = "lichaochen@tencent.com"}]
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
